# app/modules/homepage/routes/entries.py
@@ -4,7 +4,7 @@ from app.modules.homepage.validators.schema_validator import validator
 from app.modules.homepage.config.type_manager import type_manager
 from app.modules.homepage.notifications.notification_service import send_notification
 
-entries_bp = Blueprint('entries', __name__, url_prefix='/api/v1/entries')
+entries_bp = Blueprint('entries', __name__, url_prefix='/api/v1/message/entries')
 
 
 @entries_bp.route('', methods=['GET'])
